fix: leer el recurso directamente desde el classpath usando InputStream