@@ -1,7 +1,7 @@
 package com.app.workshop_registration_system.Utils;
 
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Component;
@@ -12,10 +12,11 @@ public class EmailUtils {
     public String loadHtmlTemplate(String path) {
         try {
             var resource = new ClassPathResource(path);
-            byte[] bytes = Files.readAllBytes(resource.getFile().toPath());
-            return new String(bytes, StandardCharsets.UTF_8);
+            try (InputStream inputStream = resource.getInputStream()) {
+                return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+            }
         } catch (Exception e) {
-            throw new RuntimeException("No se pudo cargar la plantilla HTML", e);
+            throw new RuntimeException("No se pudo cargar la plantilla HTML: " + path, e);
         }
     }
 
